# STZ-XML-Translator

./: .gitignore  CLAUDE.md  README.md  build-msix.ps1  build_nuitka.bat  install-app.ps1  installer.iss  main.py  main_qt.py  pyproject.toml  requirements.txt  uninstall-app.ps1
.github/workflows/: release.yml
core/: app_controller.py  extrator.py  i18n.py  injetor.py  project.py  tradutor_api.py  translation_worker.py  vigia.py
locales/: en_US.json  es_ES.json  fr_FR.json  ja_JP.json  pt_BR.json
msix/: AppxManifest.xml
scripts/: app_gui.py
tests/: test_app_controller.py  test_extrator.py  test_i18n.py  test_injetor.py  test_locale_completeness.py  test_project.py  test_theme.py  test_tradutor_api.py
tests/fixtures/: sample.xml
ui/: main.qml  theme.py  theme_controller.py  viewmodel.py
ui/components/: AppButton.qml  EditPanel.qml  GlossaryDialog.qml  LeftSidebar.qml  LogPanel.qml  StyledComboBox.qml  StyledScrollBar.qml  TagComboBox.qml  TranslationTable.qml
