[project]
name = "stz-xml-translator"
version = "1.2.0"
requires-python = ">=3.12"
description = "Desktop tool for translating game XML files using AI translation services"
dependencies = [
    "PySide6>=6.7.0",
    "azure-ai-translation-text==1.0.1",
    "azure-core==1.35.1",
    "deepl==1.22.0",
    "lxml==6.0.1",
    "requests==2.32.5",
]

[tool.setuptools]
packages = []   # app desktop compilado com Nuitka, não uma biblioteca Python

[project.optional-dependencies]
dev = [
    "nuitka==4.1.2",
    "ordered-set>=4.1.0",
    "pillow>=10.0.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "zstandard>=0.23.0",
]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v"

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
exclude        = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # line too long — handled by formatter
    "UP007", # use X | Y for union types — requires Python 3.10+ in annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports OK in test files

[tool.ruff.format]
quote-style = "double"
